packages/core/src/components/content-header/content-header.scss
/*
 * SPDX-FileCopyrightText: 2023 Siemens AG
 *
 * SPDX-License-Identifier: MIT
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

:host {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 0;

  .titleGroup {
    display: flex;
    flex-direction: column;
    flex: 1 1 0;
    min-width: 0;
    margin-right: 0.5rem;

    .titleOverflow {
      overflow-wrap: break-word;
      word-break: break-word;
    }

    .headerTitleRow {
      display: flex;

      .headerSlot {
        display: inline-flex;
        margin-left: 0.5rem;
      }
    }

    .secondary {
      padding: 0.25rem 0;
    }
  }

  .subtitle {
    margin-top: -0.125rem;
  }

  .backButton {
    margin-right: 0.5rem;
  }

  .buttons {
    flex: 0 0 auto;
  }

  .actions {
    flex: 0 0 auto;
    display: flex;
    flex-wrap: wrap;
    align-items: center;

    ::slotted(ix-button[slot='secondary-actions']) {
      width: 5rem;
      min-width: 5rem;
      max-width: 5rem;

      --ix-button-height: auto;
      --ix-button-text-white-space: normal;
      --ix-button-word-break: break-word;
      --ix-button-inner-overflow: visible;
      --ix-button-content-overflow: visible;
    }
  }
}

